# node-js-template

./: .gitignore  .prettierignore  .prettierrc.yaml  eslint.config.js  eslint.config.mjs  eslint.config.ts  jest.config.mjs  lint-staged.config.js  lint-staged.config.mjs  lint-staged.config.ts  nodemon.json  package-lock.json  package.json  prettier.config.ts  tsconfig.base.json  tsconfig.build.json  tsconfig.json  tsconfig.test.json
.husky/: pre-commit
apps/next-js-example/: eslint.config.mjs  eslint.config.mts  next.config.mts  package.json  tsconfig.json  vitest.config.mts
apps/next-js-example/src/app/: layout.tsx  page.tsx
apps/node-example/: eslint.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/node-example/src/: index.ts
apps/node-example/src/__tests__/: index.spec.ts
apps/node-example/src/example-function/: index.ts
apps/node-example/src/module/: index.ts
apps/python-example/: Makefile  pyproject.toml
apps/server/: .eslint.config.js  package.json  vitest.config.js
apps/server/src/: index.ts
apps/server/src/__tests__/: index.spec.ts
apps/vite-example/: eslint.config.js  eslint.config.ts  package.json  tsconfig.json  vite.config.ts
apps/vite-example/src/pages/example/: App.tsx  index.html  main.tsx
apps/web/: package.json  vite.config.js
src/: index.ts  module-1.ts  module-2.ts
src/__tests__/: index.spec.ts
